--- a/css/style.css
+++ b/css/style.css
@@ -40,16 +40,26 @@ nav ul li a, .social-handles a {
     color:#000;
     zoom:0.5;
 }
+
+.container{
+}
 .container-banner{
+    padding-top:50px;
     display:flex;
     margin-left:50px;
+    padding-left:80px;
+    padding-right:100px;
 }
 
-h1{
-    font-size:50px;
+.banner{
+    font-size:30px;
+    padding-right:100px;
+}
+.banner p{
+font-size: 20px;
 }
 .banner-image{
-    zoom:0.75;
+    zoom:0.6;
 }
 
 
